--- a/app/src/main/res/layout/activity_translate.xml
+++ b/app/src/main/res/layout/activity_translate.xml
@@ -8,36 +8,36 @@
 
 <TextView
     android:text="Translator"
-    android:textSize="45sp"
+    android:textSize="55sp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:id="@+id/textView5"
+    android:layout_marginTop="26dp"
     android:layout_alignParentTop="true"
-    android:layout_centerHorizontal="true"
-    android:id="@+id/textView5" />
+    android:layout_centerHorizontal="true" />
 
 <EditText
     android:id="@+id/etField1"
-    android:textSize="25sp"
+    android:textSize="20sp"
     android:hint="enter word to translate"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="85dp"
+    android:layout_marginLeft="14dp"
+    android:layout_marginStart="14dp"
     android:layout_below="@+id/textView5"
     android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:layout_marginTop="81dp" />
+    android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/tvField2"
-        android:text="some text"
-        android:textSize="25sp"
+        android:text="Translated Word"
+        android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="106dp"
         android:layout_below="@+id/btnTranslate"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/etField1"
-        android:layout_alignEnd="@+id/etField1" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/btnTranslate"
